--- a/packages/nextjs-apollo-client/tsconfig.json
+++ b/packages/nextjs-apollo-client/tsconfig.json
@@ -1,12 +1,8 @@
 {
   "compilerOptions": {
     "allowJs": true,
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "target": "ES2015",
+    "lib": ["dom", "dom.iterable", "esnext"],
     "skipLibCheck": true,
     "strict": false,
     "forceConsistentCasingInFileNames": true,
@@ -24,11 +20,6 @@
     "declarationDir": "./dist/types",
     "declarationMap": true
   },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
