chore(datatrans): add debug logging to lib/helpers

--- a/packages/backend-modules/datatrans/package.json
+++ b/packages/backend-modules/datatrans/package.json
@@ -19,7 +19,8 @@
   },
   "dependencies": {
     "@orbiting/backend-modules-scalars": "*",
-    "apollo-modules-node": "*"
+    "apollo-modules-node": "*",
+    "debug": "^4.1.1"
   },
   "devDependencies": {
     "@orbiting/backend-modules-types": "*"
