chore: add datatrans package to apps/api package.json

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,6 +17,7 @@
     "@orbiting/backend-modules-cards": "*",
     "@orbiting/backend-modules-collections": "*",
     "@orbiting/backend-modules-databroom": "*",
+    "@orbiting/backend-modules-datatrans": "*",
     "@orbiting/backend-modules-dataloader": "*",
     "@orbiting/backend-modules-discussions": "*",
     "@orbiting/backend-modules-documents": "*",
