--- a/apps/www/.env.example
+++ b/apps/www/.env.example
@@ -111,8 +111,9 @@ JWT_ISSUER=localhost
 # Environment variables for the CMS
 DATO_CMS_API_URL=https://graphql.datocms.com
 DATO_CMS_API_TOKEN=
-# Controls which environment is used for the CMS
-DATO_CMS_ENVIRONMENT=development
+# Controls which environment is used for the CMS. Uncomment to use primary environment
+# DATO_CMS_ENVIRONMENT=development
+# DATO_CMS_INCLUDE_DRAFTS=true
 
 # Secret used to allow revalidation of static pages in app-dir
 REVALIDATION_SECRET=
