feat: ui package setup wip

--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -41,7 +41,7 @@
     "@graphql-codegen/introspection": "4.0.0",
     "@next/env": "^14.0.4",
     "@next/eslint-plugin-next": "^14.0.4",
-    "@pandacss/dev": "^0.19.0",
+    "@pandacss/dev": "^0.22.1",
     "@parcel/watcher": "^2.3.0",
     "@republik/eslint-config-frontend": "*",
     "@republik/tsconfig": "*",
@@ -86,6 +86,7 @@
     "@republik/icons": "*",
     "@republik/mdast-react-render": "*",
     "@republik/nextjs-apollo-client": "*",
+    "@republik/ui": "*",
     "@stripe/react-stripe-js": "^1.7.0",
     "@use-it/event-listener": "^0.1.7",
     "@vercel/og": "^0.5.18",
