--- a/apps/www/tsconfig.json
+++ b/apps/www/tsconfig.json
@@ -10,18 +10,10 @@
     "strictNullChecks": false,
     "baseUrl": ".",
     "paths": {
-      "@app/*": [
-        "./src/*"
-      ]
+      "#styled-system/*": ["./src/styled-system/*"],
+      "@app/*": ["./src/*"]
     }
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "exclude": ["node_modules"]
 }
