feat: allow for multiple datatrans merchants

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -354,9 +354,15 @@ STRIPE_ACCOUNT_ID_REPUBLIK=
 STRIPE_PUBLISHABLE_KEY_REPUBLIK=
 STRIPE_SECRET_KEY_REPUBLIK=
 
-# datatrans
-DATATRANS_MERCHANT_ID=123123
-DATATRANS_MERCHANT_PASSWORD=
+# Datatrans
+# 
+# {<companies.id>: [<Username>, <Password>], <companies.id>: …}
+# - companies.id: ID in companies table
+# - Username, Password provided by Datatrans
+#
+# get it here: https://admin.sandbox.datatrans.com/MenuDispatch.jsp?main=3&sub=4
+#
+DATATRANS_MERCHANTS={"00000000-0000-0000-0011-000000000001": ["Username provided", "Password provided"]}
 
 #############
 # twilio
