feat(www): add draft mode api routes

--- a/apps/www/.env.example
+++ b/apps/www/.env.example
@@ -115,5 +115,8 @@ DATO_CMS_API_TOKEN=
 # DATO_CMS_ENVIRONMENT=development
 # DATO_CMS_INCLUDE_DRAFTS=true
 
+# Secret that needs to be provided to enable draft mode. See https://nextjs.org/docs/app/building-your-application/configuring/draft-mode
+DRAFT_MODE_SECRET=
+
 # Secret used to allow revalidation of static pages in app-dir
 REVALIDATION_SECRET=
