--- a/apps/goto/package.json
+++ b/apps/goto/package.json
@@ -8,8 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^14.0.4",
     "next": "^14.0.4",
-    "@next/bundle-analyzer": "^14.0.4"
+    "react-datocms": "^4.1.3",
+    "react-dom": "^18.2.0",
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.4",
