--- a/apps/www/.env.example
+++ b/apps/www/.env.example
@@ -14,6 +14,9 @@ NEXT_PUBLIC_BASE_URL=http://localhost:3010
 NEXT_PUBLIC_PUBLIKATOR_BASE_URL=http://localhost:3005
 NEXT_PUBLIC_ADMIN_BASE_URL=http://localhost:3006
 
+# Used for links to @orbiting/goto-app
+NEXT_PUBLIC_GOTO_BASE_URL=http://localhost:3020
+
 # A CDN base url proxying your frontend url
 # - used for static folder assets
 # - in production as the next.js asset prefix
