--- a/apps/goto/package.json
+++ b/apps/goto/package.json
@@ -10,14 +10,17 @@
   "dependencies": {
     "@next/bundle-analyzer": "^14.0.4",
     "next": "^14.0.4",
+    "react": "^18.2.0",
     "react-datocms": "^4.1.3",
-    "react-dom": "^18.2.0",
-    "react": "^18.2.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.4",
     "@republik/eslint-config-frontend": "*",
     "@republik/tsconfig": "*",
-    "@types/node": "18"
+    "@types/node": "18",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0"
   }
 }
