--- a/apps/goto/package.json
+++ b/apps/goto/package.json
@@ -8,11 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.4",
+    "@apollo/experimental-nextjs-app-support": "^0.4.2",
     "@next/bundle-analyzer": "^14.0.4",
+    "@republik/nextjs-apollo-client": "*",
     "next": "^14.0.4",
-    "react": "^18.2.0",
     "react-datocms": "^4.1.3",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.4",
