docs(api): add missing env-var to example file to enable developing against a remote PostgresDB

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -19,6 +19,9 @@ DATABASE_URL=postgres://postgres@localhost:5432/republik
 # Set maximum allowed connections per server/worker instance
 #DATABASE_MAX_CONNECTIONS=5
 
+# While in development, when developing against a remote database, turn this on to allow connecting to it.
+#PGSSLMODE=no-verify
+
 # redis url, leave blank for default: 127.0.0.1:6379
 #REDIS_URL=
 
