--- a/apps/www/tsconfig.json
+++ b/apps/www/tsconfig.json
@@ -19,7 +19,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "components/Footer/lightswitch.js"
   ],
   "exclude": [
     "node_modules"
