chore(web): revert accidental change in apps/www/tsconfig.json

--- a/apps/www/tsconfig.json
+++ b/apps/www/tsconfig.json
@@ -19,8 +19,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts",
-    "components/Footer/lightswitch.js"
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
