--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -446,3 +446,7 @@ DOCUMENTS_SAMPLES_REPO_IDS=some-org/some-repo-name,some-org/another-repo-name
 
 # Maximum amount of recently published documents
 DOCUMENTS_SAMPLES=3
+
+# Goto-App
+# Fowards users to www instance
+GOTO_BASE_URL=http://localhost:3020
