--- a/packages/backend-modules/referral-campaigns/package.json
+++ b/packages/backend-modules/referral-campaigns/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "@orbiting/backend-modules-scalars": "*",
     "apollo-modules-node": "*",
-    "debug": "^4.1.1"
+    "debug": "^4.1.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@orbiting/backend-modules-types": "*"
