chore: add `dev:api` script to root package.json

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dev:docs": "turbo run dev --filter=@republik/docs...",
     "dev:www": "turbo run dev --filter=@orbiting/www-app...",
     "dev:www-api": "turbo run dev --filter=@orbiting/www-app --filter=@orbiting/api-app --concurrency=100",
+    "dev:api": "turbo run dev --filter=@orbiting/api-app... --concurrency=100",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "heroku-prebuild": "scripts/prune.sh",
