refactor(apps/goto): reduce code

--- a/apps/goto/.env.example
+++ b/apps/goto/.env.example
@@ -1,3 +1,2 @@
 PORT=3020
-FRONTEND_BASE_URL=http://localhost:3010
-NEXT_PUBLIC_API_URL=http://localhost:5010/graphql
+NEXT_PUBLIC_FRONTEND_BASE_URL=http://localhost:3010
