fix(apps/api): implement datatrans package

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -446,3 +446,7 @@ DOCUMENTS_SAMPLES_REPO_IDS=some-org/some-repo-name,some-org/another-repo-name
 
 # Maximum amount of recently published documents
 DOCUMENTS_SAMPLES=3
+
+# Used for links to https://github.com/republik/goto
+# Forwards user to www instance
+GOTO_BASE_URL=http://localhost:3000
