feat(apps/www): implent datatrans

--- a/apps/www/.env.example
+++ b/apps/www/.env.example
@@ -14,6 +14,11 @@ NEXT_PUBLIC_BASE_URL=http://localhost:3010
 NEXT_PUBLIC_PUBLIKATOR_BASE_URL=http://localhost:3005
 NEXT_PUBLIC_ADMIN_BASE_URL=http://localhost:3006
 
+# Used for links to https://github.com/republik/goto
+# Forwards user to www instance
+# Using in local development is not possible, link to www instance
+NEXT_PUBLIC_GOTO_BASE_URL=http://localhost:3010
+
 # A CDN base url proxying your frontend url
 # - used for static folder assets
 # - in production as the next.js asset prefix
