chore(apps/api): update .env.example

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -449,4 +449,5 @@ DOCUMENTS_SAMPLES=3
 
 # Used for links to https://github.com/republik/goto
 # Forwards user to www instance
-GOTO_BASE_URL=http://localhost:3000
+# Using in local development is not possible, link to www instance
+GOTO_BASE_URL=http://localhost:3010
