refactor(referral-campaigns): encode referral code as base32
The encoding (Crockford-Base32) is chosen because it avoids ambiguous
characters like O, L, and I, and is case insensitive reducing user error.

Base32 ignores '-' characters allowing us to format referral codes
as AAAA-BBBB or AA-BB-CC-DD.

The byte size of the referral code was reduced to 5 bytes to produce
8 characters long codes while still allowing for 2^40 possible codes.

--- a/packages/backend-modules/referral-campaigns/package.json
+++ b/packages/backend-modules/referral-campaigns/package.json
@@ -18,7 +18,8 @@
     "@orbiting/backend-modules-scalars": "*",
     "apollo-modules-node": "*",
     "debug": "^4.1.1",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "crockford-base32": "^2.0.0"
   },
   "devDependencies": {}
 }
