feat(referral-campaign): add stripe coupon option
Apply stripe coupon for monthly subscriptions

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -436,3 +436,6 @@ DOCUMENTS_SAMPLES_REPO_IDS=some-org/some-repo-name,some-org/another-repo-name
 
 # Maximum amount of recently published documents
 DOCUMENTS_SAMPLES=3
+
+# Referral Campaign
+STRIPE_REFERRAL_CAMPAIGN_COUPON_ID=
