--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -140,6 +140,7 @@
     "next": "^14.1.0",
     "next-themes": "^0.2.1",
     "photoswipe": "^4.1.3",
+    "podcast": "^2.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-datocms": "^4.1.3",
