--- a/packages/backend-modules/referral-campaigns/tsconfig.json
+++ b/packages/backend-modules/referral-campaigns/tsconfig.json
@@ -1,14 +1,19 @@
 {
   "extends": "@orbiting/backend-modules-types/tsconfig-backend.json",
   "compilerOptions": {
-    "outDir": "build",
+    "outDir": "./build",
     "target": "ES2022",
     "module": "Node16",
     "moduleResolution": "Node16",
     "declaration": true,
-    "declarationDir": "build/@types",
+    "declarationDir": "./build/@types",
     "declarationMap": true
   },
   "include": ["."],
-  "exclude": ["node_modules", "__test__", "build"]
+  "exclude": [
+    "node_modules",
+    "__tests__",
+    "./build/**/*",
+    "./build/@types/**/*"
+  ]
 }
