--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -141,6 +141,7 @@
     "photoswipe": "^4.1.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-datocms": "^4.1.3",
     "react-dom": "^18.2.0",
     "react-dropzone": "^4.3.0",
