chore: init pnpm

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,45 +7,45 @@
   "private": true,
   "license": "AGPL-3.0",
   "dependencies": {
-    "@orbiting/backend-modules-access": "*",
-    "@orbiting/backend-modules-assets": "*",
-    "@orbiting/backend-modules-auth": "*",
-    "@orbiting/backend-modules-base": "*",
-    "@orbiting/backend-modules-base64u": "*",
-    "@orbiting/backend-modules-calendar": "*",
-    "@orbiting/backend-modules-call-to-actions": "*",
-    "@orbiting/backend-modules-collections": "*",
-    "@orbiting/backend-modules-databroom": "*",
-    "@orbiting/backend-modules-dataloader": "*",
-    "@orbiting/backend-modules-discussions": "*",
-    "@orbiting/backend-modules-documents": "*",
-    "@orbiting/backend-modules-embeds": "*",
-    "@orbiting/backend-modules-env": "*",
-    "@orbiting/backend-modules-formats": "*",
-    "@orbiting/backend-modules-gsheets": "*",
-    "@orbiting/backend-modules-invoices": "*",
-    "@orbiting/backend-modules-keyCDN": "*",
-    "@orbiting/backend-modules-mail": "*",
-    "@orbiting/backend-modules-mailbox": "*",
-    "@orbiting/backend-modules-matomo": "*",
-    "@orbiting/backend-modules-migrations": "*",
-    "@orbiting/backend-modules-publikator": "*",
-    "@orbiting/backend-modules-push-notifications": "*",
-    "@orbiting/backend-modules-redirections": "*",
-    "@orbiting/backend-modules-republik": "*",
-    "@orbiting/backend-modules-republik-crowdfundings": "*",
-    "@orbiting/backend-modules-scalars": "*",
-    "@orbiting/backend-modules-schedulers": "*",
-    "@orbiting/backend-modules-search": "*",
-    "@orbiting/backend-modules-slack": "*",
-    "@orbiting/backend-modules-sms": "*",
-    "@orbiting/backend-modules-statistics": "*",
-    "@orbiting/backend-modules-styleguide": "*",
-    "@orbiting/backend-modules-subscriptions": "*",
-    "@orbiting/backend-modules-translate": "*",
-    "@orbiting/backend-modules-types": "*",
-    "@orbiting/backend-modules-utils": "*",
-    "@orbiting/backend-modules-voting": "*",
+    "@orbiting/backend-modules-access": "workspace:*",
+    "@orbiting/backend-modules-assets": "workspace:*",
+    "@orbiting/backend-modules-auth": "workspace:*",
+    "@orbiting/backend-modules-base": "workspace:*",
+    "@orbiting/backend-modules-base64u": "workspace:*",
+    "@orbiting/backend-modules-calendar": "workspace:*",
+    "@orbiting/backend-modules-call-to-actions": "workspace:*",
+    "@orbiting/backend-modules-collections": "workspace:*",
+    "@orbiting/backend-modules-databroom": "workspace:*",
+    "@orbiting/backend-modules-dataloader": "workspace:*",
+    "@orbiting/backend-modules-discussions": "workspace:*",
+    "@orbiting/backend-modules-documents": "workspace:*",
+    "@orbiting/backend-modules-embeds": "workspace:*",
+    "@orbiting/backend-modules-env": "workspace:*",
+    "@orbiting/backend-modules-formats": "workspace:*",
+    "@orbiting/backend-modules-gsheets": "workspace:*",
+    "@orbiting/backend-modules-invoices": "workspace:*",
+    "@orbiting/backend-modules-keyCDN": "workspace:*",
+    "@orbiting/backend-modules-mail": "workspace:*",
+    "@orbiting/backend-modules-mailbox": "workspace:*",
+    "@orbiting/backend-modules-matomo": "workspace:*",
+    "@orbiting/backend-modules-migrations": "workspace:*",
+    "@orbiting/backend-modules-publikator": "workspace:*",
+    "@orbiting/backend-modules-push-notifications": "workspace:*",
+    "@orbiting/backend-modules-redirections": "workspace:*",
+    "@orbiting/backend-modules-republik": "workspace:*",
+    "@orbiting/backend-modules-republik-crowdfundings": "workspace:*",
+    "@orbiting/backend-modules-scalars": "workspace:*",
+    "@orbiting/backend-modules-schedulers": "workspace:*",
+    "@orbiting/backend-modules-search": "workspace:*",
+    "@orbiting/backend-modules-slack": "workspace:*",
+    "@orbiting/backend-modules-sms": "workspace:*",
+    "@orbiting/backend-modules-statistics": "workspace:*",
+    "@orbiting/backend-modules-styleguide": "workspace:*",
+    "@orbiting/backend-modules-subscriptions": "workspace:*",
+    "@orbiting/backend-modules-translate": "workspace:*",
+    "@orbiting/backend-modules-types": "workspace:*",
+    "@orbiting/backend-modules-utils": "workspace:*",
+    "@orbiting/backend-modules-voting": "workspace:*",
     "apollo-modules-node": "*",
     "d3-array": "^2.4.0",
     "d3-dsv": "^1.2.0",
@@ -76,7 +76,7 @@
     "start:scheduler": "node scheduler.js"
   },
   "devDependencies": {
-    "@republik/eslint-config-backend": "*",
+    "@republik/eslint-config-backend": "workspace:*",
     "apollo-fetch": "^0.7.0",
     "istanbul": "^1.1.0-alpha.1",
     "nodemon": "^2.0.4",
