--- a/apps/publikator/package.json
+++ b/apps/publikator/package.json
@@ -31,8 +31,8 @@
   "devDependencies": {
     "@next/env": "^14.1.0",
     "@next/eslint-plugin-next": "^14.1.0",
-    "@republik/eslint-config-frontend": "*",
-    "@republik/tsconfig": "*",
+    "@republik/eslint-config-frontend": "workspace:*",
+    "@republik/tsconfig": "workspace:*",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.1",
@@ -50,12 +50,12 @@
   "dependencies": {
     "@apollo/client": "~3.8.4",
     "@next/bundle-analyzer": "^14.1.0",
-    "@project-r/styleguide": "*",
-    "@republik/icons": "*",
-    "@republik/mdast-react-render": "*",
-    "@republik/nextjs-apollo-client": "*",
-    "@republik/remark-preset": "*",
-    "@republik/slate-mdast-serializer": "*",
+    "@project-r/styleguide": "workspace:*",
+    "@republik/icons": "workspace:*",
+    "@republik/mdast-react-render": "workspace:*",
+    "@republik/nextjs-apollo-client": "workspace:*",
+    "@republik/remark-preset": "workspace:*",
+    "@republik/slate-mdast-serializer": "workspace:*",
     "@sentry/nextjs": "^7.70.0",
     "axios": "^1.0.0",
     "clipboard-copy": "^3.1.0",
