--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -45,8 +45,8 @@
     "@next/eslint-plugin-next": "^14.1.0",
     "@pandacss/dev": "^0.31.0",
     "@parcel/watcher": "^2.3.0",
-    "@republik/eslint-config-frontend": "*",
-    "@republik/tsconfig": "*",
+    "@republik/eslint-config-frontend": "workspace:*",
+    "@republik/tsconfig": "workspace:*",
     "@stripe/stripe-js": "^1.22.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
@@ -80,14 +80,14 @@
     "@hookform/resolvers": "^3.3.1",
     "@juggle/resize-observer": "^3.4.0",
     "@next/bundle-analyzer": "^14.1.0",
-    "@project-r/styleguide": "*",
+    "@project-r/styleguide": "workspace:*",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-visually-hidden": "^1.0.3",
-    "@republik/icons": "*",
-    "@republik/mdast-react-render": "*",
-    "@republik/nextjs-apollo-client": "*",
+    "@republik/icons": "workspace:*",
+    "@republik/mdast-react-render": "workspace:*",
+    "@republik/nextjs-apollo-client": "workspace:*",
     "@stripe/react-stripe-js": "^1.7.0",
     "@use-it/event-listener": "^0.1.7",
     "@vercel/og": "^0.5.18",
