--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -21,10 +21,10 @@
   "dependencies": {
     "@apollo/client": "~3.8.4",
     "@next/bundle-analyzer": "^14.1.0",
-    "@project-r/styleguide": "*",
-    "@republik/icons": "*",
-    "@republik/mdast-react-render": "*",
-    "@republik/nextjs-apollo-client": "*",
+    "@project-r/styleguide": "workspace:*",
+    "@republik/icons": "workspace:*",
+    "@republik/mdast-react-render": "workspace:*",
+    "@republik/nextjs-apollo-client": "workspace:*",
     "@sentry/nextjs": "^7.70.0",
     "apollo-cache-inmemory": "^1.6.6",
     "d3-array": "^1.2.4",
@@ -60,8 +60,8 @@
   "devDependencies": {
     "@next/env": "^14.1.0",
     "@next/eslint-plugin-next": "^14.1.0",
-    "@republik/eslint-config-frontend": "*",
-    "@republik/tsconfig": "*",
+    "@republik/eslint-config-frontend": "workspace:*",
+    "@republik/tsconfig": "workspace:*",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.1",
