--- a/packages/backend-modules/auth/package.json
+++ b/packages/backend-modules/auth/package.json
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/republik/plattform#readme",
   "devDependencies": {
-    "@orbiting/backend-modules-types": "*",
+    "@orbiting/backend-modules-types": "workspace:*",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/uuid": "^8.3.0",
     "gsheets": "^3.0.0"
