--- a/packages/backend-modules/base/package.json
+++ b/packages/backend-modules/base/package.json
@@ -47,7 +47,7 @@
     "subscriptions-transport-ws": "^0.9.16"
   },
   "devDependencies": {
-    "@orbiting/backend-modules-types": "*",
+    "@orbiting/backend-modules-types": "workspace:*",
     "@types/debug": "^4.1.5"
   }
 }
