--- a/packages/backend-modules/databroom/package.json
+++ b/packages/backend-modules/databroom/package.json
@@ -23,6 +23,6 @@
     "fast-glob": "^3.2.4"
   },
   "devDependencies": {
-    "@orbiting/backend-modules-types": "*"
+    "@orbiting/backend-modules-types": "workspace:*"
   }
 }
