--- a/packages/backend-modules/documents/package.json
+++ b/packages/backend-modules/documents/package.json
@@ -16,9 +16,6 @@
     "url": "https://github.com/republik/plattform/issues"
   },
   "homepage": "https://github.com/republik/plattform#readme",
-  "scripts": {
-    "link": "yarn link"
-  },
   "dependencies": {
     "apollo-modules-node": "*",
     "check-env": "^1.3.0",
@@ -27,7 +24,7 @@
     "d3-format": "^1.4.4",
     "d3-time-format": "^2.2.3",
     "glamor": "^2.20.40",
-    "@republik/mdast-react-render": "*",
+    "@republik/mdast-react-render": "workspace:*",
     "prop-types": "^15.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
