--- a/packages/backend-modules/package.json
+++ b/packages/backend-modules/package.json
@@ -4,6 +4,6 @@
   "version": "0.0.0",
   "main": "index.js",
   "devDependencies": {
-    "@republik/eslint-config-backend": "*"
+    "@republik/eslint-config-backend": "workspace:*"
   }
 }
