--- a/packages/backend-modules/subscriptions/package.json
+++ b/packages/backend-modules/subscriptions/package.json
@@ -16,7 +16,5 @@
     "url": "https://github.com/republik/plattform/issues"
   },
   "homepage": "https://github.com/republik/plattform#readme",
-  "scripts": {
-    "link": "yarn link"
-  }
+  "scripts": {}
 }
