--- a/packages/backend-modules/utils/package.json
+++ b/packages/backend-modules/utils/package.json
@@ -17,7 +17,6 @@
   },
   "homepage": "https://github.com/republik/plattform#readme",
   "scripts": {
-    "link": "yarn link",
     "dev": "tsc -w",
     "build": "tsc"
   },
@@ -32,7 +31,7 @@
     "validator": "^13.7.0"
   },
   "devDependencies": {
-    "@orbiting/backend-modules-types": "*",
+    "@orbiting/backend-modules-types": "workspace:*",
     "@types/validator": "^13.7.4"
   }
 }
