--- a/packages/mdast/mdast-react-render/package.json
+++ b/packages/mdast/mdast-react-render/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@republik/tsconfig": "*",
+    "@republik/tsconfig": "workspace:*",
     "@swc/core": "^1.3.57",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
