--- a/packages/mdast/remark-preset/package.json
+++ b/packages/mdast/remark-preset/package.json
@@ -13,7 +13,7 @@
     "test:dev": "jest --watch"
   },
   "devDependencies": {
-    "@republik/tsconfig": "*",
+    "@republik/tsconfig": "workspace:*",
     "@swc/core": "^1.3.57",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
