--- a/packages/mdast/slate-mdast-serializer/package.json
+++ b/packages/mdast/slate-mdast-serializer/package.json
@@ -13,8 +13,8 @@
     "test:dev": "jest --watch"
   },
   "devDependencies": {
-    "@republik/remark-preset": "*",
-    "@republik/tsconfig": "*",
+    "@republik/remark-preset": "workspace:*",
+    "@republik/tsconfig": "workspace:*",
     "@swc/core": "^1.3.57",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
