--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,10 +21,15 @@ jobs:
       TURBO_TEAM: ${{ vars.TURBO_TEAM }}
     steps:
       - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v3
+        with:
+          version: 8
       - name: Use Node.js 18.x
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
-          cache: 'yarn'
-      - run: yarn --frozen-lockfile
-      - run: yarn test
+          cache: 'pnpm'
+      - name: Install dependencies
+        run: pnpm install
+      - name: Run test
+        run: pnpm test
