--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^16.0.0",
+    "@types/node": "^18.11.9",
     "commitizen": "^4.2.4",
     "commitlint": "^16.1.0",
     "cz-conventional-changelog": "^3.3.0",
