--- a/packages/backend-modules/access/package.json
+++ b/packages/backend-modules/access/package.json
@@ -23,5 +23,8 @@
     "redlock": "^4.1.0",
     "validator": "^13.7.0",
     "yargs": "^17.0.1"
+  },
+  "devDependencies": {
+    "@types/yargs": "^17.0.32"
   }
 }
