--- a/packages/backend-modules/search/package.json
+++ b/packages/backend-modules/search/package.json
@@ -25,5 +25,8 @@
     "snappy": "^7.1.1",
     "unist-util-visit": "^2.0.2",
     "yargs": "^17.0.1"
+  },
+  "devDependencies": {
+    "@types/yargs": "^17.0.32"
   }
 }
