--- a/packages/backend-modules/base/package.json
+++ b/packages/backend-modules/base/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@orbiting/backend-modules-types": "workspace:*",
-    "@types/debug": "^4.1.5"
+    "@types/debug": "^4.1.5",
+    "@types/express": "^4.17.11"
   }
 }
