--- a/packages/backend-modules/publikator/package.json
+++ b/packages/backend-modules/publikator/package.json
@@ -53,6 +53,7 @@
   "devDependencies": {
     "@orbiting/backend-modules-types": "workspace:*",
     "@types/debug": "^4.1.5",
+    "@types/yargs": "^17.0.32",
     "gsheets": "^3.0.0",
     "nodemon": "^2.0.4",
     "ws": "^7.4.6"
