--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -22,10 +22,11 @@
   },
   "devDependencies": {
     "@svgr/cli": "^6.1.2",
+    "@types/react": "^18.0.0",
     "tsup": "^7.2.0"
   },
   "peerDependencies": {
-    "react": ">=17.0.0"
+    "react": "^18.0.0"
   },
   "sideEffects": false
 }
