--- a/apps/publikator/package.json
+++ b/apps/publikator/package.json
@@ -45,7 +45,8 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "nodemon": "^2.0.4",
-    "raf": "^3.4.0"
+    "raf": "^3.4.0",
+    "uuid": "^8.1.0"
   },
   "dependencies": {
     "@apollo/client": "~3.8.4",
@@ -57,6 +58,7 @@
     "@republik/remark-preset": "workspace:*",
     "@republik/slate-mdast-serializer": "workspace:*",
     "@sentry/nextjs": "^7.70.0",
+    "@types/uuid": "^8.3.4",
     "axios": "^1.0.0",
     "clipboard-copy": "^3.1.0",
     "codemirror": "^5.57.0",
