--- a/packages/backend-modules/discussions/package.json
+++ b/packages/backend-modules/discussions/package.json
@@ -21,11 +21,14 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@orbiting/backend-modules-dataloader": "workspace:*",
     "dataloader": "^2.0.0",
-    "graphql-fields": "^2.0.3"
+    "graphql-fields": "^2.0.3",
+    "is-uuid": "^1.0.2"
   },
   "devDependencies": {
     "@orbiting/backend-modules-types": "workspace:*",
-    "@orbiting/backend-modules-utils": "workspace:*"
+    "@orbiting/backend-modules-utils": "workspace:*",
+    "@types/is-uuid": "^1.0.2"
   }
 }
