--- a/packages/backend-modules/auth/package.json
+++ b/packages/backend-modules/auth/package.json
@@ -27,6 +27,7 @@
     "gsheets": "^3.0.0"
   },
   "dependencies": {
+    "@orbiting/backend-modules-dataloader": "workspace:*",
     "@types/is-uuid": "^1.0.0",
     "apollo-modules-node": "*",
     "check-env": "^1.3.0",
