--- a/packages/backend-modules/calendar/package.json
+++ b/packages/backend-modules/calendar/package.json
@@ -21,7 +21,11 @@
   },
   "homepage": "https://github.com/republik/plattform#readme",
   "devDependencies": {
+    "@orbiting/backend-modules-types": "workspace:*"
   },
   "dependencies": {
+    "@orbiting/backend-modules-dataloader": "workspace:*",
+    "@orbiting/backend-modules-base64u": "workspace:*",
+    "dayjs": "^1.11.7"
   }
 }
