--- a/packages/backend-modules/databroom/package.json
+++ b/packages/backend-modules/databroom/package.json
@@ -18,11 +18,16 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@orbiting/backend-modules-base": "workspace:*",
+    "@orbiting/backend-modules-env": "workspace:*",
+    "@orbiting/backend-modules-schedulers": "workspace:*",
     "@types/bluebird": "^3.5.33",
     "@types/debug": "^4.1.5",
-    "fast-glob": "^3.2.4"
+    "fast-glob": "^3.2.4",
+    "yargs": "^17.0.1"
   },
   "devDependencies": {
-    "@orbiting/backend-modules-types": "workspace:*"
+    "@orbiting/backend-modules-types": "workspace:*",
+    "@types/node": "^17.0.32"
   }
 }
