--- a/packages/backend-modules/publikator/package.json
+++ b/packages/backend-modules/publikator/package.json
@@ -20,8 +20,11 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@orbiting/graphql-list-fields": "^2.0.2",
+    "@orbiting/backend-modules-dataloader": "workspace:*",
+    "@orbiting/backend-modules-auth": "workspace:*",
+    "@orbiting/backend-modules-search": "workspace:*",
     "@republik/remark-preset": "workspace:*",
+    "@orbiting/graphql-list-fields": "^2.0.2",
     "@rocka/mp3-duration": "^2.0.0",
     "@types/bluebird": "^3.5.33",
     "apollo-fetch": "^0.7.0",
@@ -53,6 +56,7 @@
   "devDependencies": {
     "@orbiting/backend-modules-types": "workspace:*",
     "@types/debug": "^4.1.5",
+    "@types/is-uuid": "^1.0.2",
     "@types/yargs": "^17.0.32",
     "gsheets": "^3.0.0",
     "nodemon": "^2.0.4",
