--- a/packages/mdast/mdast-react-render/package.json
+++ b/packages/mdast/mdast-react-render/package.json
@@ -6,9 +6,21 @@
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs",
+      "types": "./dist/index.d.ts"
+    },
+    "./email": {
+      "require": "./dist/email.js",
+      "import": "./dist/email.mjs",
+      "types": "./dist/email.d.ts"
+    }
+  },
   "scripts": {
-    "build": "tsup src/index.ts --format cjs,esm --dts --minify --clean --out-dir dist",
-    "dev": "tsup src/index.ts --format cjs,esm --dts --minify --clean --out-dir dist --sourcemap --watch",
+    "build": "tsup src/index.ts src/email.jsx --format cjs,esm --dts --minify --clean --out-dir dist",
+    "dev": "tsup src/index.ts src/email.jsx --format cjs,esm --dts --minify --clean --out-dir dist --sourcemap --watch",
     "test": "jest",
     "test:dev": "jest --watch"
   },
