test(prolitteris): don't compile test files to js

--- a/packages/backend-modules/prolitteris/tsconfig.json
+++ b/packages/backend-modules/prolitteris/tsconfig.json
@@ -10,5 +10,5 @@
     "declarationMap": true
   },
   "include": ["."],
-  "exclude": ["node_modules", "__test__", "build"]
+  "exclude": ["node_modules", "__test__", "*/__tests__/**", "build"]
 }
