--- a/packages/backend-modules/auth/package.json
+++ b/packages/backend-modules/auth/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@orbiting/backend-modules-dataloader": "workspace:*",
+    "@orbiting/backend-modules-types": "workspace:*",
     "@types/is-uuid": "^1.0.0",
     "apollo-modules-node": "*",
     "check-env": "^1.3.0",
