--- a/packages/backend-modules/databroom/package.json
+++ b/packages/backend-modules/databroom/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@orbiting/backend-modules-types": "workspace:*",
-    "@types/node": "^17.0.32"
+    "@types/node": "^17.0.32",
+    "@types/yargs": "^17.0.32"
   }
 }
