chore(backend/invoices): add missing express deps

--- a/packages/backend-modules/invoices/package.json
+++ b/packages/backend-modules/invoices/package.json
@@ -23,9 +23,11 @@
   "dependencies": {
     "@orbiting/backend-modules-formats": "workspace:*",
     "node-iso11649": "^2.1.2",
-    "swissqrbill": "^3.2.1"
+    "swissqrbill": "^3.2.1",
+    "express": "^4.17.2"
   },
   "devDependencies": {
-    "@orbiting/backend-modules-types": "workspace:*"
+    "@orbiting/backend-modules-types": "workspace:*",
+    "@types/express": "^4.17.2"
   }
 }
