chore(backend/statistics): add backend-modules-types

--- a/packages/backend-modules/statistics/package.json
+++ b/packages/backend-modules/statistics/package.json
@@ -21,6 +21,7 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@orbiting/backend-modules-types": "workspace:*",
     "bluebird": "^3.7.2",
     "d3-array": "^2.4.0",
     "debug": "^4.1.1",
