--- a/package.json
+++ b/package.json
@@ -90,13 +90,13 @@
   },
   "lint-staged": {
     "*.{js,ts,tsx}": [
-      "yarn eslint --fix"
+      "pnpm eslint --fix"
     ]
   },
   "engines": {
     "node": "^18.0.0"
   },
-  "packageManager": "yarn@1.22.10",
+  "packageManager": "pnpm@8.15.4",
   "resolutions": {
     "typescript": "^5.2.2"
   }
